--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "3.4.1",
+    "i18n-js": "^3.8.0",
+    "jquery": "3.4.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
