Add review controller and new review page

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -11,6 +11,7 @@ tour:
       - image/png
 paginate:
   page_6: 6
+  page_8: 8
 
 image_default: "https://tourdanangcity.vn/wp-content/uploads/2018/04/lang_co-tour-tour-hue-1-ngay.jpg?v=1615422534"
 
