--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.6.0",
     "bootstrap-datepicker": "^1.9.0",
+    "chart.js": "^3.2.1",
+    "chartkick": "^4.0.4",
     "i18n-js": "^3.8.0",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
